<resources>
    <string name="app_name">FlagQuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Flag Quiz Game</string>
    <string name="button">Start</string>
    <string name="correct_text">Correct:</string>
    <string name="correct_number">0</string>
    <string name="empty_text">Empty:</string>
    <string name="empty_number">0</string>
    <string name="wrong_text">Wrong:</string>
    <string name="wrong_number">0</string>
    <string name="question">Question # </string>
    <string name="country_name">Country Name</string>
    <string name="your_result">Your Result</string>
    <string name="exit">Exit</string>
    <string name="new_quiz">New Quiz</string>
</resources>